@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Documentation</title>
-	<meta name='creator' content='Mini-XML v2.4'>
+	<meta name='creator' content='Mini-XML v2.3'>
 	<style type='text/css'><!--
 	h1, h2, h3, p { font-family: sans-serif; text-align: justify; }
 	tt, pre a:link, pre a:visited, tt a:link, tt a:visited { font-weight: bold; color: #7f0000; }
